@@ -1,3 +1,9 @@
+2009-06-11  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/wxterminal/wxt_gui.cpp (wxt_set_color):  plot .. lc N should take
+	only the color from linetype N, not any of the other properties.
+	Bugfix  (e.g.  plot sin(x) with lines lt 0 lc 3)
+
 2008-06-04  Peter Hedwig  <peter@affenbande.org>
 
 	* term/lua/gnuplot-tikz.lua term/lua/gnuplot-tikz.help
